# OpenCV-Greyscale-Converter

./: CMakeLists.txt  README.md
src/: main.cpp
